[gd_scene load_steps=8 format=3 uid="uid://yfab22vj7w5o"]

[ext_resource type="Script" path="res://Scenes/map/map_room.gd" id="1_sgcui"]
[ext_resource type="Texture2D" uid="uid://bfvi02kojsa00" path="res://art/tile_0103.png" id="1_siqu6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1ymwm"]
radius = 30.0

[sub_resource type="Animation" id="Animation_1nlnm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Line2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_p5r53"]
resource_name = "highlight"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 0.500001),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.25, 1.25)]
}

[sub_resource type="Animation" id="Animation_sw2fc"]
resource_name = "select"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Line2D:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_map_room_selected"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kfhlc"]
_data = {
"RESET": SubResource("Animation_1nlnm"),
"highlight": SubResource("Animation_p5r53"),
"select": SubResource("Animation_sw2fc")
}

[node name="MapRoom" type="Area2D"]
collision_layer = 16
collision_mask = 8
script = ExtResource("1_sgcui")

[node name="Visuals" type="Node2D" parent="."]

[node name="Line2D" type="Line2D" parent="Visuals"]
modulate = Color(1, 1, 1, 0)
position = Vector2(0, 3)
points = PackedVector2Array(0, 10, 12, 0, 8, -12, -8, -12, -12, 0)
closed = true
width = 2.0
default_color = Color(0.513726, 0.513726, 0.513726, 1)

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("1_siqu6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1ymwm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kfhlc")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
